Z-index fix to make navigation bar stick on top of content on scrolling.

--- a/_sass/partials/_helper.scss
+++ b/_sass/partials/_helper.scss
@@ -1,6 +1,6 @@
 .content-wrapper {
     position: relative;
-    z-index: 1;
+/*    z-index: 1; */
     height: 100%;
 }
 .bordered {
